2009-05-22  Zoltan Varga  <vargaz@gmail.com>

	* Tuple.cs Tuples.cs: New files.

	* Lazy.cs LazyExecutionMode.cs Funcs.cs: New files.

2009-05-14 Gonzalo Paniagua Javier <gonzalo@novell.com>

	* Type.cs: (GetInterfaceMap) 'this' can't be an interface itself.
	Fixed bug #503728.

2009-05-03 Gonzalo Paniagua Javier <gonzalo@novell.com>

	* TermInfoDriver.cs: replace Peek with DataAvailable.

2009-05-02  Sebastien Pouliot  <sebastien@ximian.com>

	* Console.cs: Remove Windows-specific p/invokes and SSC code
	from the NET_2_1 build.

2009-05-01  Sebastien Pouliot  <sebastien@ximian.com>

	* AppDomainManager.cs: Fix base class for NET_2_1 and implement
	CheckSecuritySettings (added in 2.0SP and part of SL API)

2009-04-29 Gonzalo Paniagua Javier <gonzalo@novell.com>

	* Enum.cs: return the value as an enum of the right type.

2009-04-28 Gonzalo Paniagua Javier <gonzalo@novell.com>

	* Enum.cs: avoid exceptions from ToObject and use Try* instead.

2009-04-25  Miguel de Icaza  <miguel@novell.com>

	* TermInfoDriver.cs: Use the new StreamReader.DataAvailable to
	load all the data that was added into the `stdin' stream when we
	did the `Read'.

2009-04-24  Sebastien Pouliot  <sebastien@ximian.com>

	* Environment.cs: #ifdef out code that use the registry for the 
	NET_2_1 profile and some other properties (2) that added
	[SecuritySafeCritical] methods to audit inside Moonlight.

2009-04-21  Mark Probst  <mark.probst@gmail.com>

	* Environment.cs: Bump corlib version.

2009-04-21  Miguel de Icaza  <miguel@novell.com>

	* TermInfoDriver.cs: Prevent race condition if two threads try to
	initialize the Console at the same time. 

	What happens is that inited is set, and elsewhere we try to
	dereference native_terminal_size before it is set.

	* Reduce code size by using a table instead of manually making a
	few hundred calls.
	
2009-04-20  Miguel de Icaza  <miguel@novell.com>

	* Enum.cs (MonoEnumInfo): Compare bytes, shorts, ints and longs as